syntax = "proto3";

package yandex.cloud.priv.baas.v1;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/baas/v1/resource.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/baas/v1;baas";

service ResourceService {
    rpc List(ListResourcesRequest) returns (ListResourcesResponse);

    rpc Get(GetResourceRequest) returns (GetResourceResponse);

    rpc Delete(DeleteResourceRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
          metadata: "DeleteResourceMetadata"
          response: "google.protobuf.Empty"
        };
    }

    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

message ListResourcesRequest {
    string folder_id = 1 [ (required) = true, (length) = "<=50" ];
    int64 page_size = 2 [(value) = "<=1000"];
    string page_token = 3 [(length) = "<=100"];
}

message ListResourcesResponse {
    repeated Resource resources = 1;
    string next_page_token = 2;
}

message GetResourceRequest {
    string compute_instance_id = 1;
}

message GetResourceResponse {
    Resource resource = 1;
}

message DeleteResourceRequest {
    string compute_instance_id = 1;
}

message DeleteResourceMetadata {
}

message ListTasksRequest {
    string compute_instance_id = 1;
    int64 page_size = 2 [(value) = "<=1000"];
    string page_token = 3 [(length) = "<=100"];
}

message ListTasksResponse {
    repeated Task tasks = 1;
    string next_page_token = 2;
}
